Fix nav icon alignment

--- a/app/stylesheets/pattern-lib/_nav.scss
+++ b/app/stylesheets/pattern-lib/_nav.scss
@@ -160,7 +160,6 @@
 	.xpl-nav-pages {
 		> a:before {
 			margin-right: .25em;
-			vertical-align: middle;
 			font-family: 'FontAwesome';
 			font-size: 14px;
 		}
